--- a/src/main/resources/templates/editar_produto.html
+++ b/src/main/resources/templates/editar_produto.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org">
     <head> 
         <meta charset="utf-8"/>
-        <title>Sistema Gerenciador de Vendas (SGV)</title>
+        <title>Gerenciador de Vendas e Estoque (SGVE)</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/dataTables.bootstrap5.min.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
@@ -12,7 +12,8 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
-    </head>
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+        </head>
     <body>
         <div th:replace="header :: header">...</div>
         <div class="container" style="margin-top: 50px; width: 50%;">
@@ -32,9 +33,17 @@
                 <div class="row">
                     <div class="col-md-12 mb-3">
                         <label for="preco">Preço:</label>
-                        <input type="number" min="0" th:field="*{preco}" id="preco" placeholder="Preço" class="form-control">
+                        <input type="number" step="0.01" min="0" th:field="*{preco}" id="preco" placeholder="Preço" class="form-control">
                     </div>    
                     <span th:if="${#fields.hasErrors('preco')}" th:errors="*{preco}" class="alert alert-warning"></span>
+                </div>
+                <!-- Novo campo para Quantidade em Estoque -->
+                <div class="row">
+                    <div class="col-md-12 mb-3">
+                    <label for="quantidadeEstoque">Quantidade em Estoque:</label>
+                        <input type="number" min="0" th:field="*{quantidadeEstoque}" id="quantidadeEstoque" placeholder="Quantidade em Estoque" class="form-control">
+                </div>    
+                    <span th:if="${#fields.hasErrors('quantidadeEstoque')}" th:errors="*{quantidadeEstoque}" class="alert alert-warning"></span>
                 </div>
                 <hr class="mb-4">
                 <input type="submit" value="Salvar" class="btn btn-success btn-block">
