--- a/src/main/resources/templates/gerenciador_estoque.html
+++ b/src/main/resources/templates/gerenciador_estoque.html
@@ -12,33 +12,35 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
 	<script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/dataTables.bootstrap5.min.js"></script>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-        </head>
+        <link rel="stylesheet" th:href="@{/css/style.css}">
+    </head>
     <body>
         <div th:replace="header :: header">...</div>
         <div class="container" style="margin-top: 50px; margin-bottom: 20px">
-            <h2 class="alert alert-dark">Gerenciar Vendas</h2> 
-            <p class="text-right"><a href="/vendas/novo" class="btn btn-primary"> Nova Venda </a></p>
+            <h2 class="alert alert-dark">Gerenciar Estoque</h2> 
+            <p class="text-right"><a href="/estoque/novo" class="btn btn-primary"> Novo Produto </a></p>
         </div> 
         <div class="container">
-            <table id="TabelaVendas" class="table table-striped">
+            <table id="TabelaProdutos" class="table table-striped">
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Data</th>
-                        <th>Total</th>
+                        <th>Nome</th>
+                        <th>Preço</th>
+                        <th>Quantidade em Estoque</th>
                         <th>Alterar</th>
                         <th>Excluir</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr th:each="v : ${listaVendas}">
-                        <td th:text="${v.id}"></td>
-                        <td th:text="${v.getDataVendaFormatada()}"></td>
-                        <td th:text="${v.calcularTotal()}"></td>
-                        <td><a th:href="@{/vendas/{id}(id=${v.id})}" class="btn btn-warning"><i class="bi bi-pencil"></i></a></td>
+                    <tr th:each="p : ${listaProdutos}">
+                        <td th:text="${p.id}"></td>
+                        <td th:text="${p.nome}"></td>
+                        <td th:text="${p.preco}"></td>
+                        <td th:text="${p.quantidadeEstoque}"></td>
+                        <td><a th:href="@{/estoque/{id}(id=${p.id})}" class="btn btn-warning"><i class="bi bi-pencil"></i></a></td>
                         <td>
-                            <form action="#" th:action="@{/vendas/{id}(id=${v.id})}" th:method="delete">
+                            <form action="#" th:action="@{/estoque/{id}(id=${p.id})}" th:method="delete">
                                 <button type="submit" id="deleteButton" class="btn btn-danger"><i class="bi bi-trash"></i></button>
                             </form>
                         </td>
@@ -48,7 +50,7 @@
         </div>
         <script>
             $(document).ready( function () {
-                $('#TabelaVendas').DataTable({
+                $('#TabelaProdutos').DataTable({
                     "language": {
                         "sProcessing":    "Procesando...",
                         "sLengthMenu":    "Exibir _MENU_ registros por página",
@@ -78,4 +80,3 @@
         </script>
     </body>
 </html>
-
