--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -3,12 +3,14 @@
       xmlns:th="http://www.thymeleaf.org">
     <head> 
         <meta charset="utf-8"/>
-        <title>Sistema Gerenciador de Vendas (SGV)</title>
+        <title>Gerenciador de Vendas e Estoque (SGVE)</title>
+   <link rel="stylesheet" th:href="@{/css/style.css}">
+
     </head>
     <!-- Navigation -->
     <div th:fragment="header">
         <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">SGV</a>
+            <a class="navbar-brand" href="#">SGVE</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,7 +34,8 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" href="/usuarios">Usuarios</a>
-                             </div>
+                                <a class="dropdown-item" href="/estoque">Estoque</a> <!-- Adiciona a opção de Estoque --> 
+                       </div>
                         </li>
                     </div>
                     <li class="nav-item dropdown">
