--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
     </head>
     <body>
         <div th:replace="header :: header">...</div>
-        
+          
+        <h1 style="margin-top: 60px;margin-left:350px;"> Bem vindo(a)!</h1> 
     </body>
 
 </html>
