--- a/src/main/resources/templates/editar_usuario.html
+++ b/src/main/resources/templates/editar_usuario.html
@@ -23,7 +23,11 @@
                 <hr>
                 <h3> Dados do Usuario:</h3>
                 <hr>
-                <div class="row">
+                    <div class="mb-3">
+                        <label for="nome">Nome: </label>
+                        <input type="text" id="nome" name="nome" th:field="*{nome}" class="form-control" required>
+                    </div>
+                    <div class="row">
                     <div class="col-md-12 mb-3">
                         <label for="login">Login: </label>
                         <input type="text" minlength="1" th:field="*{login}" id="login" placeholder="Login do Usuario" class="form-control">
