--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -5,21 +5,61 @@
         <meta charset="utf-8"/>
         <title>Gerenciador de Vendas e Estoque (SGVE)</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+           <!-- Importa o Bootstrap para estilização responsiva -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
             <style>
-                #titulo{
-                    font-stretch: ultra-expanded; 
-                }
-                body{
-    background:lightskyblue;
-}
-h2{
-    max-width: 400px;
-margin:4px;
-font-size: 14px;
-}
+                    /* Torna o body um container flexível para centralizar o conteúdo */
+        body {
+            background: cadetblue;           /* Cor de fundo */
+            height: 100vh;                   /* Altura total da tela */
+            margin: 0;
+            display: flex;                   /* Ativa o Flexbox */
+            justify-content: center;         /* Alinha horizontalmente ao centro */
+            align-items: center;             /* Alinha verticalmente ao centro */
+            font-family: Arial, sans-serif;  /* Fonte mais moderna */
+        }
+
+        /* Caixa do formulário (login) com fundo branco e sombra */
+        .login-box {
+            background-color: white;
+            padding: 50px;
+            border-radius: 12px;             /* Cantos arredondados */
+            box-shadow: 0 0 30px rgba(0,0,0,0.3); /* Sombra suave */
+            width: 500px;                    /* Largura fixa */
+            max-width: 90%;                  /* Responsivo em telas menores */
+        }
+
+        /* Título  */
+        #titulo {
+            font-weight: bold;
+            font-size: 45px;
+            text-align: center;
+        }
+
+        /* Subtítulo  */
+        h2.alert {
+            font-size: 18px;
+            text-align: center;
+        }
+
+        /* Inputs ocupam toda a largura da caixinha */
+        .form-control {
+            font-size: 16px;
+            height: 45px;
+            width: 100%;
+        }
+
+        /* Botão também ocupa toda a largura */
+        .btn-block {
+           font-size: 18px;
+           height: 45px;
+            width: 100%;
+        }
+
 
             </style>                      
     </head>
@@ -31,13 +71,13 @@ font-size: 14px;
                 <div class="row">
                     <div class="col-md-12 mb-3">
                         <label for="login">Login: </label>
-                        <input type="text" id="login" name="login" placeholder="Login do Usuario" class="form-control">
+                        <input type="text" id="login" name="login" placeholder="Login do Usuario" class="form-control"style="width: 350px;">
                     </div>    
                 </div>
                 <div class="row">
                     <div class="col-md-12 mb-3">
                         <label for="senha">Senha:</label>
-                        <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control">
+                        <input type="password" id="senha" name="senha" placeholder="Senha" class="form-control" style="width: 350px;" >
                     </div>    
                 </div>
                 <div class="row">    
@@ -46,7 +86,7 @@ font-size: 14px;
                             Nome de usuário ou senha inválidos.
                         </div>
                         <hr>
-                        <input type="submit" value="login" class="btn btn-primary btn-block">    
+                        <input type="submit" value="login" class="btn btn-primary btn-block" style="width: 350px;">    
                     </div>   
                 </div>
             </div>
